--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "algolia": "atomic-algolia"
   },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
     "@docusaurus/types": "^2.2.0",
+    "atomic-algolia": "^0.3.19",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19"
   },
