--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "algolia": "atomic-algolia"
   },
   "dependencies": {
+    "@docsearch/react": "3",
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
     "@headlessui/react": "^1.7.4",
